# MiniDyno-buildable

./: .gitignore  BUCK  BUILD  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bot.py  build.ninja  call_api.js  config.json  default.nix  go.mod  main.go  meson.build  minidyno.scm  package.json  requirements.txt
.buddy/: Deploy-to-Bot.fixed.yml  Deployment.fixed.yml
api/: server.py
api/static/: style.css
api/templates/: base.html  dashboard.html  filters.html  punishments.html
core/: automod.py  db.py  logging_sys.py  punishments.py  scheduler.py
src/: main.rs
